srcs/myftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: myftps-svc
  labels:
    app: app-ftps
spec:
  type: LoadBalancer      
  ports:
  - port: 21
    targetPort: 21
    name: ftps
  - port: 21021
    targetPort: 21021
    name: ftps-data
  selector:
    app: app-ftps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myftps-dep
  labels:
    app: app-ftps
spec:
  selector:
    matchLabels:
      app: app-ftps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-ftps
    spec:
      containers:
      - name: myftps
        image: myftps
        imagePullPolicy: Never
        ports:
          - containerPort: 21
            name: ftps
          - containerPort: 21021
            name: ftps-data
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps
      volumes:
        - name: ftps-persistent-storage
          persistentVolumeClaim:
            claimName: ftps-pv-claim
