srcs/mygrafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygrafana-svc
  labels:
    app: app-grafana
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: app-grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygrafana-dep
  labels:
    app: app-grafana
spec:
  selector:
    matchLabels:
      app: app-grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-grafana
    spec:
      restartPolicy: Always
      containers:
      - name: mygrafana
        image: mygrafana
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
            name: http
