srcs/myinfluxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: myinfluxdb-svc
  labels:
    app: app-influxdb
spec:
  type: LoadBalancer 
  ports:
  - port: 8086
    targetPort: 8086
    name: http
  selector:
    app: app-influxdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myinfluxdb-dep
  labels:
    app: app-influxdb
spec:
  selector:
    matchLabels:
      app: app-influxdb
  strategy:
    type: Recreate    
  template:
    metadata:
      labels:
        app: app-influxdb
    spec:
      restartPolicy: Always      
      containers:
      - name: myinfluxdb
        image: myinfluxdb
        imagePullPolicy: Never
        ports:
          - containerPort: 8086
            name: http
        volumeMounts:
        - name: influxdb-persistent-storage
          mountPath: /var/lib/influxdb
      volumes:
      - name: influxdb-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
