srcs/mymysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mymysql-svc
  labels:
    app: app-mysql
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
    name: http
  selector:
    app: app-mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymysql-dep
  labels:
    app: app-mysql
spec:
  selector:
    matchLabels:
      app: app-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-mysql 
    spec:
      restartPolicy: Always
      containers:
      - name: mymysql
        image: mymysql 
        imagePullPolicy: Never
        ports:
          - containerPort: 3306
            name: http
        volumeMounts:
        - name: mysql-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-pv
        persistentVolumeClaim:
          claimName: mysql-pv-claim
