srcs/mynginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-svc
  labels:
    app: app-nginx
spec:
  selector:
    app: app-nginx
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 30022
    targetPort: 30022
    name: ssh
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx-dep
  labels:
    app: app-nginx
spec:
  selector:
    matchLabels:
      app: app-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      restartPolicy: Always
      containers:
      - image: mynginx
        name: mynginxname
        imagePullPolicy: Never
        ports:
          - containerPort: 80
            name: http
          - containerPort: 443
            name: https
          - containerPort: 22
            name: ssh
