srcs/mytelegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-svc
  labels:
    app: app-telegraf
spec:
  type: LoadBalancer
  ports:
  - port: 4999
    targetPort: 8086
    name: http
  selector:
    app: app-telegraf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-dep
  labels:
    app: app-telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-telegraf
  template:
    metadata:
      labels:
        app: app-telegraf
    spec:
      containers:
      - name: mytelegraf
        image: mytelegraf
        ports:
        - containerPort: 4999
        imagePullPolicy: Never
        volumeMounts:
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
