srcs/myingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mynginx-svc
          servicePort: 80
